--- a/lesson1/exercises/src/app/fav-photos/fav-photos.component.html
+++ b/lesson1/exercises/src/app/fav-photos/fav-photos.component.html
@@ -1,6 +1,9 @@
 <div class="photos">
    <h3>{{photosTitle}}</h3>
-   <img src="{{image1}}" alt="Oops! Missing photo!"> 
-   <img src="" alt="Oops! Missing photo!">  <br>
-   <img src="" alt="Oops! Missing photo!"> 
+   <img src="{{image1}}" alt="American Flag"> <br>
+
+   <img src="{{image2}}" alt="Lady Liberty">  <br>
+   
+   <img src="{{image3}}" alt = "Four Freedoms"> 
+
 </div>
