--- a/lesson2/examples/input-practice/src/app/movie-list/movie-list.component.html
+++ b/lesson2/examples/input-practice/src/app/movie-list/movie-list.component.html
@@ -4,5 +4,17 @@
        <li *ngFor ="let movie of movies">{{movie}}</li>
     </ol>
     <hr>
-
+    <input #newMovie (keyup.enter)="addMovie(newMovie.value); newMovie.value = ''" type="text" placeholder="Enter Movie Title Here"/>
+    <button (click)="addMovie(newMovie.value); newMovie.value = ''">Add</button>
  </div>
+
+ <!-- <div class='movies col-4'>
+   <h3>Movies to Watch</h3>
+   <ol>
+      <li *ngFor ="let movie of movies">{{movie}}</li>
+   </ol>
+   <hr>
+   <input #newMovie (keyup.enter)='true' type='text' placeholder="Enter Movie Title Here"/>
+   <button (click)='true'>Add</button>
+   <p>{{newMovie.value}}</p>
+</div> -->
